crates/compiler/src/generate/snapshots/generate_resource_pot_map-3.snap
---
source: crates/compiler/src/generate/partial_bundling.rs
input_file: crates/testing_helpers/src/lib.rs
---
name: A
id: A_66be
immutable: false
resource_pot_type: Js
entry: Some(
    ModuleId {
        relative_path: "A",
        query_string: "",
    },
)
module_groups: [
    ModuleGroupId(
        "A_Entry",
    ),
    ModuleGroupId(
        "F_DynamicImport",
    ),
]
modules: [
    ModuleId {
        relative_path: "A",
        query_string: "",
    },
    ModuleId {
        relative_path: "C",
        query_string: "",
    },
]
resources: []

-------

name: B
id: B_2f5d
immutable: false
resource_pot_type: Js
entry: Some(
    ModuleId {
        relative_path: "B",
        query_string: "",
    },
)
module_groups: [
    ModuleGroupId(
        "B_Entry",
    ),
]
modules: [
    ModuleId {
        relative_path: "B",
        query_string: "",
    },
    ModuleId {
        relative_path: "E",
        query_string: "",
    },
]
resources: []

-------

name: B
id: B_3f39
immutable: false
resource_pot_type: Js
entry: None
module_groups: [
    ModuleGroupId(
        "B_Entry",
    ),
    ModuleGroupId(
        "D_DynamicImport",
    ),
]
modules: [
    ModuleId {
        relative_path: "D",
        query_string: "",
    },
]
resources: []
