crates/compiler/src/generate/snapshots/generate_resource_pot_map_external-4.snap
---
source: crates/compiler/src/generate/partial_bundling.rs
input_file: crates/testing_helpers/src/lib.rs
---
name: A_66be
id: A_66be
immutable: false
resource_pot_type: Js
entry: Some(
    ModuleId {
        relative_path: "A",
        query_string: "",
    },
)
module_groups: [
    ModuleGroupId(
        "A_Entry",
    ),
    ModuleGroupId(
        "F_DynamicImport",
    ),
]
modules: [
    ModuleId {
        relative_path: "A",
        query_string: "",
    },
    ModuleId {
        relative_path: "C",
        query_string: "",
    },
]
resources: []

-------

name: B_2f5d
id: B_2f5d
immutable: false
resource_pot_type: Js
entry: Some(
    ModuleId {
        relative_path: "B",
        query_string: "",
    },
)
module_groups: [
    ModuleGroupId(
        "B_Entry",
    ),
]
modules: [
    ModuleId {
        relative_path: "B",
        query_string: "",
    },
    ModuleId {
        relative_path: "E",
        query_string: "",
    },
]
resources: []

-------

name: B_3f39
id: B_3f39
immutable: false
resource_pot_type: Js
entry: None
module_groups: [
    ModuleGroupId(
        "B_Entry",
    ),
    ModuleGroupId(
        "D_DynamicImport",
    ),
]
modules: [
    ModuleId {
        relative_path: "D",
        query_string: "",
    },
]
resources: []

-------

name: F_DynamicImport_f67a
id: F_DynamicImport_f67a
immutable: false
resource_pot_type: Js
entry: None
module_groups: [
    ModuleGroupId(
        "F_DynamicImport",
    ),
]
modules: [
    ModuleId {
        relative_path: "F",
        query_string: "",
    },
]
resources: []
